--- a/style.css
+++ b/style.css
@@ -1,82 +1,38 @@
-        a {
-            color: blue;
-            text-decoration: none;
-        }
-        u {
+body{
+    background-color: #ffffff;
+    color: #000000;
+    padding: 20px;
+    margin-left: 25%;
+  }
+  form {
+  margin-top: 30px;
+  }
+  form label {
+  display: block;
+  margin-bottom: 10px;
+  }
+  form input[type="text"],
+  form input[type="email"],
+  form textarea {
+  width: 50%;
+  padding: 5px;
 
-            background: linear-gradient(to bottom left, #ffffff 49%, #000000 99%);
-        }
-
-        #id1{
-            margin-left: 45%
-        }
-        body{
-            background: linear-gradient(to top right, #ffffff 31%, #000000 73%);
-            z-index: 0
-            background-color: #f9f9f9;
-            height: 100vh;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .container {
-            z-index: 0;
-            background: white;
-            margin-top: 140px;
-            position: relative;
-            padding: 20px;
-            box-shadow: 0px 0px 10px 0px #333;
-            z-index: 0;
-            max-width: 800px;
-        }
-        img {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            width: 110px;
-            height: 110px;
-            box-shadow: 0px 0px 10px 0px #333;
-            z-index: 1;
-        }
-        h1, h2, p {
-            margin: 0;
-        }
-        h1 {
-            font-size: 36px;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-        h2 {
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 20px;
-            margin-bottom: 10px;
-        }
-        p {
-            font-size: 18px;
-            line-height: 3;
-            margin-bottom: 10px;
-        }
-        header {
-            margin-bottom: 690px;
-            position: absolute;
-            background-color: black;
-            color: white;
-            padding: 20px;
-            width: 800px;
-            z-index: 1;
-        }
-
-        h1 {
-             margin: 0;
-        }
-        .dd {
-            font-family: 'Bebas Neue', cursive;
-            font-family: 'Sedgwick Ave Display', cursive;
-        }
-
-        .bb{
-            font-family: 'Dancing Script', cursive;
-        }
+  margin-bottom: 10px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  }
+  form textarea {
+  height: 100px;
+  }
+  form input[type="submit"] {
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  padding: 10px 20px;
+  cursor: pointer;
+  }
+  form input[type="submit"]:hover {
+  background-color: #3e8e41;
+  }
+  
